--- a/app/listen1_chrome_extension/css/player.css
+++ b/app/listen1_chrome_extension/css/player.css
@@ -224,7 +224,7 @@ a {
     width: 100%;
     height: 90px;
     margin: 0 auto;
-    background-color: #222222;
+    background-color: rgba(0, 0, 0, 0.5)
 }
 
 .m-playbar .btns {
@@ -730,16 +730,39 @@ li {
 }
 
 .playlist-detail {
-    position: absolute;
+    position: fixed;
+    left: -20px;
+    top: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    /* width: 100%; */
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 36px;
+    /* position: relative; */
+    /* display: inline-block; */
+    /* position: fixed; */
+    /* display: block; */
+    /* left: 30; */
+    /* top: 0; */
+    /* padding-top: 90px; */
+    /* padding-left: 50px; */
     text-align: left;
-    background-color: #333;
+    background-color: rgba(30, 30, 30, 0.8);
+    /* background-color: #333; */
+    -webkit-box-shadow: 0 0 200 200px rgba(0, 0, 0, 0.9);
+    box-shadow: 0 0 200 200px rgba(0, 0, 0, 0.9);
     width: 100%;
+    /* overflow: visible; */
 }
 
 .playlist-detail .detail-head {
     width: 200px;
     position: fixed;
     margin-bottom: 20px;
+    margin-left: 20px;
+    padding-left: 10px;
 }
 
 .playlist-detail .detail-head-cover {
@@ -747,6 +770,7 @@ li {
     /*    width: 225px;*/
     float: left;
     margin: 10px;
+    margin-top: 0;
 }
 
 .playlist-detail .detail-head-cover img {
@@ -828,7 +852,7 @@ li {
 
 .playlist-detail .detail-songlist {
     margin-left: 220px;
-    margin-top: 6px;
+    margin-top: 0px;
     margin-right: 14px;
 }
 
@@ -866,6 +890,7 @@ li {
 
 .playsong-detail .detail-songinfo h2 {
     font-size: 22px;
+    margin-top: 0px;
 }
 
 .playsong-detail .detail-songinfo .info {
@@ -911,6 +936,7 @@ li {
 .detail-songlist {
     padding-left: 0px;
     text-align: left;
+    margin-top: -10px;
 }
 
 .detail-songlist li {
@@ -918,6 +944,7 @@ li {
     width: 100%;
     display: block;
     padding: 10px;
+    /* padding-top: 10px; */
 }
 
 .detail-songlist .col2 {
@@ -999,12 +1026,12 @@ li {
 }
 
 .detail-songlist .odd {
-    background-color: #333;
+    background-color: rgba(30, 30, 30, 0.3);
 }
 
 .detail-songlist .even,
 .detail-songlist .detail-add {
-    background-color: #2d2d2d;
+    background-color: rgba(30, 30, 30, 0.6);
 }
 
 .dialog .detail-songlist li:hover {
@@ -1164,7 +1191,7 @@ li {
 }
 
 .source-list div {
-    background-color: #333333;
+    background-color: rgba(30, 30, 30, 0.1);
     color: #ffffff;
     height: 35px;
     border: 0px solid #ffffff;
@@ -1190,12 +1217,12 @@ li {
 } */
 
 .source-list .active {
-    background-color: #e6e6e6;
-    color: #333333;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #333;
 }
 
 .source-list div:hover {
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.9);
     color: #333333;
 }
 
