--- a/app/listen1_chrome_extension/css/cover.css
+++ b/app/listen1_chrome_extension/css/cover.css
@@ -2,10 +2,6 @@
  * Globals
  */
 
-@font-face {
-    font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
-}
-
 
 /* Links */
 
@@ -24,7 +20,8 @@ a:hover {
     color: #333;
     text-shadow: none;
     /* Prevent inheritence from `body` */
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.5);
+    /* background-color: #fff; */
     border: 1px solid #fff;
 }
 
@@ -36,19 +33,13 @@ a:hover {
 html,
 body {
     height: 100%;
-    font-size: 14px;
-    line-height: 1.5em;
-    font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     /* background-color: #333; */
-    /* background-color: transparent; */
-    background-color: rgba(68, 68, 68, 0.3);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 body {
     color: #fff;
     overflow: hidden !important;
-    /* background-color: transparent; */
-    /* background-color: rgba(30, 30, 30, 0.5); */
     /*  text-align: center;*/
     /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
 }
@@ -62,20 +53,14 @@ body {
     height: 100%;
     /* For at least Firefox */
     min-height: 100%;
-    -webkit-box-shadow: inset 0 0 600px rgba(0, 0, 0, .6);
-    box-shadow: inset 0 0 600px rgba(0, 0, 0, .6);
+    /*  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
 }
 
 .site-wrapper-inner {
     display: table-cell;
     vertical-align: top;
-    /* background-color: rgba(68, 68, 68, 0.9) */
 }
-
-
-/* .site-wrapper {
-    background-color: rgba(68, 68, 68, 0.9),
-} */
 
 .cover-container {
     margin-right: auto;
@@ -110,7 +95,7 @@ body {
 .masthead-nav>li>a {
     padding-right: 0;
     padding-left: 0;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     color: #fff;
     /* IE8 proofing */
@@ -118,24 +103,11 @@ body {
     border-bottom: 2px solid transparent;
 }
 
-
-/* .masthead-nav>li>a#minmin {
-    padding-right: 10px;
-    padding-left: 10px;
-} */
-
 .masthead-nav>li>a:hover,
 .masthead-nav>li>a:focus {
     background-color: transparent;
     border-bottom-color: #a9a9a9;
     border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.masthead-nav>li>a#minmin:hover,
-.masthead-nav>li>a#minmin:focus {
-    background-color: rgba(255, 255, 255, .25);
-    /* border-bottom-color: #a9a9a9; */
-    border-bottom-color: transparent;
 }
 
 .masthead-nav>.active>a,
@@ -177,7 +149,6 @@ body {
     color: #999;
     /* IE8 proofing */
     color: rgba(255, 255, 255, .5);
-    width: 100%;
 }
 
 
@@ -212,7 +183,7 @@ body {
     .masthead,
     .mastfoot,
     .cover-container {
-        width: 100%;
+        width: 880px;
     }
 }
 
