--- a/app/listen1_chrome_extension/css/player.css
+++ b/app/listen1_chrome_extension/css/player.css
@@ -1,10 +1,10 @@
 a {
-    cursor: pointer;
+ cursor: pointer;
 }
 
 .shadow {
     position: fixed;
-    background: rgba(30, 30, 30, 0.9);
+    background: rgba(30,30,30,0.9);
     _position: absolute;
     z-index: 9999;
     top: 0;
@@ -21,7 +21,7 @@ a {
     top: 120px;
     width: 480px;
     height: 420px;
-    z-index: 10000;
+    z-index:10000;
     overflow: hidden;
     border-radius: 4px 4px 4px 4px;
     padding: 20px;
@@ -53,13 +53,11 @@ a {
     background-color: #333;
 }
 
-
 /*.masthead {
     z-index: 999;
 }*/
 
-.masthead,
-.mastfoot {
+.masthead, .mastfoot {
     margin: 0 auto;
     left: 0;
     right: 0;
@@ -68,9 +66,7 @@ a {
 }
 
 .masthead {
-    /* background-color: #333; */
-    background-color: transparent;
-    /* background-color: rgba(30, 30, 30, 0.5); */
+    background-color: #333;
     height: 90px;
 }
 
@@ -78,20 +74,17 @@ a {
     float: left;
     height: 50px;
     width: 50px;
-    margin-left: 27px;
     margin-right: 20px;
     cursor: pointer;
 }
 
 .masthead .masthead-brand {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(255,255,255, 1);
     cursor: pointer;
 }
 
 .cover-container {
     position: relative;
-    background-color: transparent;
-    /* background-color: rgba(30, 30, 30, 0.5); */
 }
 
 .container-placeholder {
@@ -99,8 +92,8 @@ a {
 }
 
 .site-wrapper {
-    width: 100%;
-    overflow: hidden;
+    width:100%;
+    overflow:hidden;
     position: absolute;
     padding-left: 17px;
 }
@@ -110,25 +103,24 @@ a {
     margin-top: 90px;
     /* uncomment the line below will hide the scroll bar */
     /*padding-right: 17px;*/
-    box-sizing: content-box;
-    width: 100%;
-    /* background-color: #333; */
-    /* background-color: rgba(30, 30, 30, 0.5); */
-    background-color: transparent;
+    box-sizing:content-box;
+    width:100%;
+    background-color: #333;
 }
 
 .searchbox {
-    /*    margin-top: 100px;*/
+/*    margin-top: 100px;*/
 }
 
-.searchbox .nav {
+.searchbox .nav{
     margin-top: 12px;
 }
 
-.searchbox .nav .searchspinner {
+.searchbox .nav .searchspinner{
     margin-top: 8px;
     height: 25px;
 }
+
 
 .searchitem {
     height: 92px;
@@ -136,8 +128,8 @@ a {
 
 .searchitem img {
     float: left;
-    height: 90px;
-    width: 90px;
+    height:90px;
+    width:90px;
 }
 
 .searchitem div {
@@ -180,12 +172,12 @@ a {
 }
 
 .playlist-covers .loading_bottom {
-    clear: both;
-    text-align: center;
+    clear:both;
+    text-align:center;
 }
 
 .playlist-covers .loading_bottom img {
-    height: 35px;
+    height:35px;
 }
 
 .u-cover .mask {
@@ -224,19 +216,16 @@ a {
     width: 100%;
     height: 90px;
     margin: 0 auto;
-    background-color: rgba(0, 0, 0, 0.5)
+    background-color: #222222;
 }
+
 
 .m-playbar .btns {
     width: 157px;
     padding: 27px 0 0 19px;
 }
 
-.m-playbar .btns,
-.m-playbar .head,
-.m-playbar .play,
-.m-playbar .volum,
-.m-playbar .oper {
+.m-playbar .btns, .m-playbar .head, .m-playbar .play, .m-playbar .volum, .m-playbar .oper {
     float: left;
 }
 
@@ -250,9 +239,7 @@ a {
     background: url(../images/loading.gif);
 }
 
-.m-pbar .barbg,
-.m-pbar .cur,
-.m-pbar .left {
+.m-pbar .barbg, .m-pbar .cur, .m-pbar .left {
     background: url(../images/statbar.png) no-repeat 0 9999px;
     _background-image: url(../images/statbar.png);
 }
@@ -273,39 +260,39 @@ a {
     text-indent: -9999px;
 }
 
-.m-playbar .btns .previous {
+.m-playbar .btns .previous{
     background-position: -72px 0px;
 }
 
-.m-playbar .btns .previous:hover {
-    background-position: -72px -36px;
+.m-playbar .btns .previous:hover{
+    background-position:-72px -36px;
 }
 
-.m-playbar .btns .play {
+.m-playbar .btns .play{
     width: 36px;
     height: 36px;
-    margin-top: 0;
+    margin-top:0;
     background-position: 0px 0px;
 }
 
-.m-playbar .btns .play:hover {
+.m-playbar .btns .play:hover{
     background-position: 0px -36px;
 }
 
-.m-playbar .btns .pas {
+.m-playbar .btns .pas{
     background-position: -108px 0px;
 }
 
-.m-playbar .btns .pas:hover {
+.m-playbar .btns .pas:hover{
     background-position: -108px -36px;
 }
 
-.m-playbar .btns .next {
+.m-playbar .btns .next{
     /* pause icon distance adjust from 36 to 38 */
     background-position: -38px 0px;
 }
 
-.m-playbar .btns .next:hover {
+.m-playbar .btns .next:hover{
     background-position: -38px -36px;
 }
 
@@ -314,8 +301,7 @@ a {
     margin: 10px 15px 0 0;
 }
 
-.m-playbar .head,
-.m-playbar .head img {
+.m-playbar .head, .m-playbar .head img {
     width: 70px;
     height: 70px;
 }
@@ -335,7 +321,7 @@ a {
     margin-right: 120px;
 }
 
-.m-playbar .words .notextdeco {
+.m-playbar .words .notextdeco{
     text-decoration: none;
 }
 
@@ -393,6 +379,7 @@ a {
 
 .m-pbar {
     position: relative;
+
 }
 
 .m-pbar.play {
@@ -409,15 +396,14 @@ a {
     margin-top: 0px;
 }
 
-.m-pbar .barbg,
-.m-pbar .cur,
-.m-pbar .rdy {
+.m-pbar .barbg, .m-pbar .cur, .m-pbar .rdy {
     height: 7px;
 }
 
 .m-pbar .barbg {
     background-position: right 0;
 }
+
 
 .m-pbar .cur {
     position: absolute;
@@ -454,8 +440,7 @@ a {
     color: #a1a1a1;
 }
 
-em,
-i {
+em, i {
     font-style: normal;
     text-align: left;
     font-size: inherit;
@@ -577,15 +562,15 @@ i {
     position: relative;
 }
 
-.m-playbar .menu .lyric p {
+.m-playbar .menu .lyric p{
     min-height: 20px;
 }
 
-.m-playbar .menu .lyric .placeholder {
+.m-playbar .menu .lyric .placeholder{
     height: 50px;
 }
 
-.m-playbar .menu .lyric .highlight {
+.m-playbar .menu .lyric .highlight{
     font-size: 15px;
     color: #ffffff;
 }
@@ -594,8 +579,7 @@ i {
     background-color: #555555;
 }
 
-.m-playbar .menu li:hover,
-.m-playbar .menu li:focus {
+.m-playbar .menu li:hover, .m-playbar .menu li:focus {
     background-color: #999999;
 }
 
@@ -641,22 +625,22 @@ li {
     color: #ffffff;
     cursor: pointer;
     vertical-align: middle;
-    display: inline-block;
+    display:inline-block;
     width: 60px;
     line-height: 20px;
 }
 
-.menu-header a:hover small {
+.menu-header a:hover small{
     background-color: #ffffff;
     color: #333333;
 }
-
 .menu .add-all {
     display: inline-block;
     position: absolute;
     left: 335px;
     top: 9px;
 }
+
 
 .menu .remove-all {
     display: inline-block;
@@ -665,8 +649,9 @@ li {
     top: 9px;
 }
 
+
 .menu .close-popup {
-    float: right;
+    float:right;
     margin-right: 14px;
     font-size: 20px;
     text-decoration: none;
@@ -714,9 +699,7 @@ li {
     text-align: center;
 }
 
-.form-signin .form-control,
-.form-signin .valid-img,
-.form-signin .btn {
+.form-signin .form-control, .form-signin .valid-img, .form-signin .btn {
     margin-top: 10px;
 }
 
@@ -730,52 +713,28 @@ li {
 }
 
 .playlist-detail {
-    position: fixed;
-    left: -20px;
-    top: 0;
-    bottom: 0;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    /* width: 100%; */
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 36px;
-    /* position: relative; */
-    /* display: inline-block; */
-    /* position: fixed; */
-    /* display: block; */
-    /* left: 30; */
-    /* top: 0; */
-    /* padding-top: 90px; */
-    /* padding-left: 50px; */
+    position: absolute;
     text-align: left;
-    background-color: rgba(30, 30, 30, 0.8);
-    /* background-color: #333; */
-    -webkit-box-shadow: 0 0 200 200px rgba(0, 0, 0, 0.9);
-    box-shadow: 0 0 200 200px rgba(0, 0, 0, 0.9);
+    background-color: #333;
     width: 100%;
-    /* overflow: visible; */
 }
 
 .playlist-detail .detail-head {
     width: 200px;
     position: fixed;
     margin-bottom: 20px;
-    margin-left: 20px;
-    padding-left: 10px;
 }
 
 .playlist-detail .detail-head-cover {
     height: 180px;
-    /*    width: 225px;*/
+/*    width: 225px;*/
     float: left;
     margin: 10px;
-    margin-top: 0;
 }
 
 .playlist-detail .detail-head-cover img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width:100%;
+    max-height:100%;
 }
 
 .detail-head-title {
@@ -845,26 +804,15 @@ li {
     background-position: -40px -204px;
 }
 
-.playlist-detail .detail-head-title h2 {
+.playlist-detail .detail-head-title h2{
     font-size: 17px;
     margin-bottom: 35px;
 }
 
 .playlist-detail .detail-songlist {
     margin-left: 220px;
-    margin-top: 0px;
+    margin-top: 6px;
     margin-right: 14px;
-}
-
-.playsong-detail {
-    position: fixed;
-    left: -20px;
-    top: 0px;
-    width: 100%;
-    padding-top: 120px;
-    background-color: rgba(30, 30, 30, 0.9);
-    -webkit-box-shadow: inset 0 0 600px rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 600px rgba(0, 0, 0, 0.5);
 }
 
 .playsong-detail .detail-head {
@@ -876,7 +824,7 @@ li {
 .playsong-detail .detail-songinfo {
     padding-left: 440px;
     padding-right: 55px;
-}
+} 
 
 .playsong-detail .detail-head .detail-head-cover {
     margin: 0 auto;
@@ -890,7 +838,6 @@ li {
 
 .playsong-detail .detail-songinfo h2 {
     font-size: 22px;
-    margin-top: 0px;
 }
 
 .playsong-detail .detail-songinfo .info {
@@ -898,20 +845,16 @@ li {
     margin-bottom: 5px;
     padding-bottom: 10px;
 }
-
-.playsong-detail .detail-songinfo .info span {
+.playsong-detail .detail-songinfo .info span{
     color: #9b9b9b;
     margin-right: 10px;
 }
-
 .playsong-detail .detail-songinfo .info span.album {
     margin-left: 30px;
 }
-
 .playsong-detail .lyric {
-    color: #999;
-    /* IE8 proofing */
-    color: rgba(255, 255, 255, .5);
+    color: #999; /* IE8 proofing */
+    color: rgba(255,255,255,.5);
     text-align: left;
     width: 100%;
     display: inline-block;
@@ -921,22 +864,21 @@ li {
     font-size: 15px;
 }
 
-.playsong-detail .lyric p {
+.playsong-detail .lyric p{
     min-height: 20px;
 }
 
-.playsong-detail .lyric .placeholder {
+.playsong-detail .lyric .placeholder{
     height: 50px;
 }
 
-.playsong-detail .lyric .highlight {
+.playsong-detail .lyric .highlight{
     color: #ffffff;
 }
 
 .detail-songlist {
     padding-left: 0px;
     text-align: left;
-    margin-top: -10px;
 }
 
 .detail-songlist li {
@@ -944,7 +886,6 @@ li {
     width: 100%;
     display: block;
     padding: 10px;
-    /* padding-top: 10px; */
 }
 
 .detail-songlist .col2 {
@@ -984,35 +925,35 @@ li {
     cursor: pointer;
 }
 
-.detail-songlist .detail-tools .detail-add-button {
+.detail-songlist .detail-tools .detail-add-button{
     background-position: 0px 0px;
 }
 
-.detail-songlist .detail-tools .detail-fav-button {
+.detail-songlist .detail-tools .detail-fav-button{
     background-position: -25px 0px;
 }
 
-.detail-songlist .detail-tools .detail-delete-button {
+.detail-songlist .detail-tools .detail-delete-button{
     background-position: -75px 0px;
 }
 
-.detail-songlist .detail-tools .source-button {
+.detail-songlist .detail-tools .source-button{
     background-position: -100px 0px;
 }
 
-.detail-songlist .detail-tools .detail-add-button:hover {
+.detail-songlist .detail-tools .detail-add-button:hover{
     background-position: 0px -25px;
 }
 
-.detail-songlist .detail-tools .detail-fav-button:hover {
+.detail-songlist .detail-tools .detail-fav-button:hover{
     background-position: -25px -25px;
 }
 
-.detail-songlist .detail-tools .detail-delete-button:hover {
+.detail-songlist .detail-tools .detail-delete-button:hover{
     background-position: -75px -25px;
 }
 
-.detail-songlist .detail-tools .source-button:hover {
+.detail-songlist .detail-tools .source-button:hover{
     background-position: -100px -25px;
 }
 
@@ -1021,17 +962,16 @@ li {
     display: inline-block;
 }
 
-.detail-songlist .detail-artist a {
+.detail-songlist .detail-artist a{
     color: #777777;
 }
 
 .detail-songlist .odd {
-    background-color: rgba(30, 30, 30, 0.3);
+    background-color: #333;
 }
 
-.detail-songlist .even,
-.detail-songlist .detail-add {
-    background-color: rgba(30, 30, 30, 0.6);
+.detail-songlist .even,  .detail-songlist .detail-add{
+    background-color: #2d2d2d;
 }
 
 .dialog .detail-songlist li:hover {
@@ -1039,12 +979,11 @@ li {
     cursor: pointer;
 }
 
-
 /*.playlist-detail .detail-songlist li:hover {
     background-color: #999999;
 }*/
 
-.playlist-detail .btn {
+.playlist-detail .btn{
     width: 88px;
     margin-top: 0;
     float: left;
@@ -1087,10 +1026,11 @@ li {
     width: 100px;
 }
 
-.dialog-playlist li h2 {
+.dialog-playlist li h2{
     margin-left: 125px;
     font-size: 17px;
 }
+
 
 .dialog-backuplist {
     padding-left: 0px;
@@ -1113,7 +1053,7 @@ li {
     width: 100px;
 }
 
-.dialog-backuplist li h2 {
+.dialog-backuplist li h2{
     margin-top: 10px;
     margin-left: 125px;
     font-size: 15px;
@@ -1140,12 +1080,12 @@ li {
     width: 100px;
 }
 
-.dialog-merge-playlist li h2 {
+.dialog-merge-playlist li h2{
     margin-left: 125px;
     font-size: 17px;
 }
 
-.dialog-newplaylist input {
+.dialog-newplaylist input{
     margin-bottom: 22px;
 }
 
@@ -1167,8 +1107,7 @@ li {
     bottom: 20px;
 }
 
-.dialog-editplaylist .confirm-button,
-.dialog-open-url .confirm-button {
+.dialog-editplaylist .confirm-button, .dialog-open-url .confirm-button {
     margin-right: 82px;
     margin-left: 93px;
 }
@@ -1177,32 +1116,31 @@ li {
     margin-top: 30px;
 }
 
-.dialog-connect-lastfm .confirm-button {
+.dialog-connect-lastfm .confirm-button{
     margin-left: 40px;
     margin-right: 48px;
 }
 
 .source-list {
     position: absolute;
-    right: -0px;
+    right: -32px;
     top: 0px;
     z-index: 10;
     text-align: center;
 }
 
-.source-list div {
-    background-color: rgba(30, 30, 30, 0.1);
+.source-list div{
+    background-color: #333333;
     color: #ffffff;
     height: 35px;
-    border: 0px solid #ffffff;
+    border: 1px solid #ffffff;
     width: 75px;
     cursor: pointer;
     vertical-align: middle;
     padding-top: 6px;
 }
 
-
-/* .source-list div:first-child:not(:last-child) {
+.source-list div:first-child:not(:last-child) {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 0;
@@ -1214,15 +1152,15 @@ li {
     border-top-right-radius: 0;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
-} */
+}
 
 .source-list .active {
-    background-color: rgba(255, 255, 255, 0.9);
-    color: #333;
+    background-color: #e6e6e6;
+    color: #333333;
 }
 
 .source-list div:hover {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: #ffffff;
     color: #333333;
 }
 
@@ -1238,28 +1176,26 @@ li {
 
 .settings-content {
     padding: 20px;
+
 }
 
 .settings-content .btn {
     margin-right: 10px;
 }
 
-.btn-group button,
-.btn-pagination,
-.btn-pagination:focus {
+.btn-group button,.btn-pagination,.btn-pagination:focus {
     background-color: #333333;
     color: #ffffff;
     border-color: #333333;
 }
 
-.btn-group button:hover,
-.btn-pagination:hover {
+.btn-group button:hover,.btn-pagination:hover {
     background-color: #ffffff;
     color: #333333;
 }
 
-.searchbox li>a:hover {
-    color: #333333;
+.searchbox  li>a:hover{
+color: #333333;
 }
 
 .search-pagination {
@@ -1270,7 +1206,7 @@ li {
 }
 
 .search-pagination button:focus {
-    outline: 0;
+    outline:0;
 }
 
 .search-pagination label {
