--- a/app/listen1_chrome_extension/css/iparanoid.css
+++ b/app/listen1_chrome_extension/css/iparanoid.css
@@ -1,55 +1,78 @@
 /* global settings (theme related) */
-
 :root {
-    --icon-default-color: #666666;
-    --icon-highlight-color: #111111;
-    --text-default-color: #111111;
-    --text-subtitle-color: #666666;
-    --text-disable-color: #999999;
-    --lyric-default-color: #666666;
-    --link-default-color: #999999;
-    --link-highlight-color: #111111;
-    --link-active-color: #323232;
-    --link-inactive-color: #a9a9a9;
-    --line-default-color: #e5e5e5;
-    --sidebar-background-color: rgba(245, 245, 245, 0.8);
-    --sidebar-highlight-background-color: rgba(0, 0, 0, 0.5);
-    --sidebar-highlight-text-color: #ffffff;
-    --content-background-color: rgba(255, 255, 255, 0.9);
-    --foot-background-color: rgba(255, 255, 255, 0.9);
-    --foot-border-color: #e5e5e5;
-    --footer-main-background-color: #f2f2f2;
-    --footer-player-bar-background-color: #e0e0e0;
-    --footer-player-bar-cur-background-color: #666666;
-    --footer-header-background-color: #e7e7e7;
-    --footer-menu-even-background-color: #f7f7f7;
-    --footer-menu-hover-background-color: #e5e5e5;
-    --search-input-background-color: #f2f2f2;
-    --window-control-border-color: #dddddd;
-    --important-color: #ff4444;
-    --button-background-color: #eeeeee;
-    --button-border-color: #bebebe;
-    --button-hover-background-color: #dddddd;
-    --now-playing-page-background-color: #ffffff;
-    --now-playing-close-icon-color: #666666;
-    --disable-song-title-color: #b7b7b7;
-    --windows-border-color: #dddddd;
-    --default-border-radius: 2px;
-    --text-default-size: 13px;
-    --h2-title-font-size: 24px;
-    --songlist-even-background-color: transparent;
-    --songlist-border-color: #f4f4f4;
-    --player-left-icon-color: #b1b1b1;
-    --player-icon-color: #666666;
-    --player-icon-hover-color: #666666;
-    --player-right-icon-color: #333333;
-    --player-right-icon-hover-color: #000000;
-    --dialog-highlight-color: #e3e3e5;
-    --dialog-background-color: #fafafa;
-    --dialog-text-color: #565656;
-    --volume-icon-color: #333333;
-    --volume-bar-background-color: #e0e0e0;
-    --volume-bar-current-background-color: #333333;
-    --scroll-color: #c2c2c2;
-    --lyric-icon-background-color: #ffffff;
+  --icon-default-color: #666666;
+  --icon-highlight-color: #111111;
+
+  --text-default-color: #111111;
+  --text-subtitle-color: #666666;
+  --text-disable-color: #999999;
+
+  --lyric-default-color: #666666;
+  --lyric-on-cover-color: #333333;
+  --lyric-important-color: #ff4444;
+  --lyric-important-on-cover-color: #ffffff;
+
+  --link-default-color: #999999;
+  --link-highlight-color: #111111;
+  --link-active-color: #323232;
+  --link-inactive-color: #a9a9a9;
+
+  --line-default-color: #e5e5e5;
+
+  --sidebar-background-color: rgba(245, 245, 245, 0.7);
+  --sidebar-highlight-background-color: rgba(0, 0, 0, 0.5);
+  --sidebar-highlight-text-color: rgba(255, 255, 255, 0.9);
+
+  --content-background-color: rgba(255, 255, 255, 0.9);
+
+  --foot-background-color: rgba(255, 255, 255, 1);
+  --foot-border-color: #e5e5e5;
+  --footer-main-background-color: #f2f2f2;
+  --footer-player-bar-background-color: #e0e0e0;
+  --footer-player-bar-cur-background-color: #666666;
+  --footer-header-background-color: #e7e7e7;
+  --footer-menu-even-background-color: #f7f7f7;
+  --footer-menu-hover-background-color: #e5e5e5;
+  --search-input-background-color: #f2f2f2;
+
+  --window-control-border-color: #dddddd;
+
+  --important-color: #ff4444;
+
+  --button-background-color: #eeeeee;
+  --button-border-color: #bebebe;
+  --button-hover-background-color: #dddddd;
+
+  --now-playing-page-background-color: #ffffff;
+  --now-playing-close-icon-color: #666666;
+
+  --disable-song-title-color: #b7b7b7;
+  --windows-border-color: #dddddd;
+
+  --default-border-radius: 2px;
+  --text-default-size: 13px;
+  --h2-title-font-size: 24px;
+
+  --songlist-even-background-color: #f5f5f5;
+  --songlist-border-color: #f4f4f4;
+
+  --player-left-icon-color: #b1b1b1;
+  --player-icon-color: #666666;
+  --player-icon-hover-color: #666666;
+  --player-right-icon-color: #333333;
+  --player-right-icon-hover-color: #000000;
+
+  --dialog-highlight-color: #e3e3e5;
+  --dialog-background-color: #fafafa;
+  --dialog-text-color: #565656;
+
+  --volume-icon-color: #333333;
+  --volume-bar-background-color: #e0e0e0;
+  --volume-bar-current-background-color: #333333;
+
+  --scroll-color: #c2c2c2;
+
+  --lyric-icon-background-color: #ffffff;
+  --lyric-font-size: 15px;
+  --lyric-line-margin: 20px;
 }
